2.20.2:

2010-04-13  José Alburquerque  <jaalburqu@svn.gnome.org>

	gdk_docs.xml: Another regeneration because of parsing errors.

	* gdk/src/gdk_docs.xml: Regenerate once more to avoid parsing errors
	caused by &...; expressions that don't make sense to gmmproc.

2010-04-11  José Alburquerque  <jaalburqu@svn.gnome.org>

	Regenerate docs once more to fix comment errors.

	* gdk/src/gdk_docs.xml:
	* gtk/src/gtk_docs.xml: Regenerated after fixing the
	docextract_to_xml.py script to handle C++ multi-line comments in
	function descriptions that include sample C++ code.

2010-04-11  José Alburquerque  <jaalburqu@svn.gnome.org>

	Regenerate docs with the new docextract_to_xml.py script.

	* atk/src/atk_docs.xml:
	* gdk/src/gdk_docs.xml:
	* gtk/src/gtk_docs.xml: Regenerated with the new documentation
	extraction script to take advantage of the new generation method it
	uses.

2.20.1:

2010-04-07  Murray Cumming  <murrayc@murrayc.com>

    Builder: Complete the exceptions thrown documentation.

	* gtk/src/builder.hg: Completed the @throws lines now that GtkBuilder
    has documentation about the GError domains that it throws.
    This fixed bug #548022 (Alexander Shaduri).

2010-04-07  Murray Cumming  <murrayc@mmurrayc.com>

    API reference documentation: Remove gobjection-introspection annotations.

	* gdk/src/gdk_docs.xml:
	* gtk/src/gtk_docs.xml: Use regexxer to remove the gobject-introspection
    annotations so they do not appear in the generated HTML. In future, we will
    stop these from even getting in to the XML.

2010-04-07  Murray Cumming  <murrayc@murrayc.com>

    Really fix the @newin2p* in the *_override.xml files.

	* gdk/src/gdk_docs_override.xml:
	* gtk/src/gtk_docs_override.xml: Use GTK+'s original Since: syntax here
    instead of @newin{2,*} because that is what our parser currently expects.
    Otherewise it is interpreted as a parameter name.

2010-04-07  Murray Cumming  <murrayc@murrayc.com>

    Replace some @newin2p* with @newin{2,*}.
