@@ -1,3 +1,10 @@
+2010-04-16  David King  <davidk@openismus.com>
+
+	Add main page to Doxygen documentation
+
+	* docs/Makefile.am: Parse gtk/gtkmm.h for documentation.
+	* gtk/gtkmm.h: Add main page to Doxygen documentation.
+
 2.20.2:
 
 2010-04-13  José Alburquerque  <jaalburqu@svn.gnome.org>
